# spotidownshithole

./: Cargo.toml  README.md
src/: converter.rs  downloader.rs  error.rs  main.rs  spotify.rs
src/tag/: id3.rs  mod.rs  mp4.rs  ogg.rs
src/ui/: backend.rs  login_screen.rs  main_screen.rs  mod.rs  settings_screen.rs  theme.rs
