[package]
name = "spotidown"
version = "0.1.0"
edition = "2018"
authors = ["exttex"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
url = "2.2"
id3 = "0.6"
dirs = "3.0"
chrono = "0.4"
lewton = "0.10"
futures = "0.3"
reqwest = "0.11"
lame-sys = "0.1"
aspotify = "0.7"
mp4ameta = "0.11"
librespot = "0.2"
async-std = "1.9"
num-traits = "0.2"
serde_json = "1.0"
async-stream = "0.3"
oggvorbismeta = "0.1"
sanitize-filename = "0.3"
pretty_env_logger = "0.4"

iced = { version = "0.3", features = ["tokio", "svg"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.8", features = ["full"] }